# lobster-roll

./: AGENTS.md  README.md  pyproject.toml
skills/lobster-roll/: SKILL.md
src/lobster_roll/: __init__.py  cli.py  constants.py  errors.py  models.py  output.py  search.py  storage.py
src/lobster_roll/commands/: diary.py  food.py  meal.py  profile.py  summary.py
tests/: test_cli.py
