[project]
name = "lobster-roll"
version = "0.1.0"
description = "Agent-ready nutrition diary CLI — foods, meals, and daily tracking"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "James Keane" }]
dependencies = [
  "typer>=0.12.0",
  "rich>=13.0.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0"]

[project.scripts]
lobster-roll = "lobster_roll.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
